Auto factories (#235)